// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass active flag to active slot 1`] = `
<ContextProvider
  value={
    Object {
      "slots": Object {
        "slot": Array [
          Object {
            "id": "one",
            "render": [Function],
          },
          Object {
            "id": "two",
            "render": [Function],
          },
        ],
      },
    }
  }
>
  <Consumer(Slot)
    active="two"
    name="slot"
  />
</ContextProvider>
`;

exports[`should renderer only active slot if onlyActive=true 1`] = `
<ContextProvider
  value={
    Object {
      "slots": Object {
        "slot": Array [
          Object {
            "id": "one",
            "render": [Function],
          },
          Object {
            "id": "two",
            "render": [Function],
          },
        ],
      },
    }
  }
>
  <Consumer(Slot)
    active="two"
    name="slot"
    onlyActive={true}
  />
</ContextProvider>
`;

exports[`should renderer slots and pass props 1`] = `
<ContextProvider
  value={
    Object {
      "slots": Object {
        "slot": Array [
          [Function],
          [Function],
        ],
      },
    }
  }
>
  <Consumer(Slot)
    name="slot"
    props={
      Object {
        "id": "Pizza",
      }
    }
  />
</ContextProvider>
`;

exports[`should renderer slots in id/render format 1`] = `
<ContextProvider
  value={
    Object {
      "slots": Object {
        "slot": Array [
          Object {
            "id": "one",
            "render": [Function],
          },
          Object {
            "id": "two",
            "render": [Function],
          },
        ],
      },
    }
  }
>
  <Consumer(Slot)
    name="slot"
    props={
      Object {
        "id": "Pizza",
      }
    }
  />
</ContextProvider>
`;
